examples/napi/tests/build_error_tests/tsfn_thread_safety_4.stderr
error[E0277]: `Rc<Cell<u32>>` cannot be sent between threads safely
  --> tests/build_error_tests/tsfn_thread_safety_4.rs:19:22
   |
19 |   let _future = tsfn.call_async(());
   |                      ^^^^^^^^^^ `Rc<Cell<u32>>` cannot be sent between threads safely
   |
   = help: within `LocalReturn`, the trait `Send` is not implemented for `Rc<Cell<u32>>`
note: required because it appears within the type `LocalReturn`
  --> tests/build_error_tests/tsfn_thread_safety_4.rs:7:8
   |
 7 | struct LocalReturn(Rc<Cell<u32>>);
   |        ^^^^^^^^^^^
note: required by a bound in `ThreadsafeFunction::<T, Return, CallJsBackArgs, ErrorStatus, false, Weak, MaxQueueSize>::call_async`
  --> $WORKSPACE/crates/napi/src/threadsafe_function.rs
   |
   |   pub async fn call_async(&self, value: T) -> Result<Return>
   |                ---------- required by a bound in this associated function
   |   where
   |     Return: Send,
   |             ^^^^ required by this bound in `ThreadsafeFunction::<T, Return, CallJsBackArgs, ErrorStatus, false, Weak, MaxQueueSize>::call_async`
